[package]
name = "roc_cli"
version = "1.1.0"
authors = ["wx-chevalier@github"]
edition = "2018"
description = "CLI frontend of Czkawka"
license = "MIT"
homepage = "https://github.com/wx-chevalier/rust-os-cleaner"
repository = "https://github.com/wx-chevalier/rust-os-cleaner"

[dependencies]
roc_core = { path = "../roc_core" }
structopt = "0.3.18"